--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@
 # Replace with your actual Notion API key and Database ID
 NOTION_API_KEY=your_notion_api_key
 NOTION_DATABASE_ID=your_notion_database_id
+
+EMAIL_ADDRESS=your_email
+EMAIL_PASSWORD=your_password
