--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# Notion API credentials
-# Replace with your actual Notion API key and Database ID
 NOTION_API_KEY=your_notion_api_key
 NOTION_DATABASE_ID=your_notion_database_id
+
+EMAIL_ADDRESS=your_email_adress
+EMAIL_PASSWORD=your_password
